##################################################
 Revision history for Log::Log4perl
##################################################

0.50 (not yet released)
    * (ms) TODO: Fix Win32 problem
    * (ms) Added ':resurrect' source filter, which uncomments all lines
           starting with "###l4p". Can be used for hidden L4p statements,
           which are then activated by calling 
           'use Log::Log4perl qw(:resurrect)'.

0.49 (11/07/2004)
    * (ms) init_and_watch() no longer die()s on reloading syntactically 
           wrong configuration files but issues a warning and then 
           reloads the last working config.
    * (ms) init() now also accepts an open file handle (passed in as a
           glob) to a configuration file or a ref to an IO::File object.
    * (ms) Jos I. Boumans <kane@xs4all.net> and 
           Chris Winters <chris@cwinters.com> reported an error thrown
           by L4p in their app SPOPS: During global construction. Looks
           like the Logger object's internal hash is cleared and then
           the is_<level> method gets called, resulting in a runtime
           exception. Added proposed remedy checking if the called
           method is defined by ref.
    * (ms) Added check to init_and_watch if obtaining the mod
           timestamp failed.

0.48 (08/20/2004)
    * (ms) fixed bug reported by Chip Salzenberg <chip@pobox.com>: logdie()
           and logwarn() are now compliant with the warn() and die() 
           standard which suppresses the "at file line x" message if
           the message ends with a "\n".
    * (ms) New interface for custom config parsers. 
           Log::Log4perl::Config::BaseConfigurator now provides a base class
           for new config parsers. Init can now be called like
           Log::Log4perl->init($parser) with a parser object, which is
           derived from Log::Log4perl::Config::BaseConfigurator and 
           provides a parse() method (no arguments). The file (or whatever)