@@ -10,4 +10,4 @@ log4j.appender.LOGFILE.filename=example.log
 log4j.appender.LOGFILE.mode=append
 
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%F %L %p %t %c - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%F{1} %L %p %t %c - %m%n
