@@ -3,11 +3,14 @@
 ##################################################
 
 0.50 (not yet released)
-    * (ms) TODO: Fix Win32 problem
     * (ms) Added ':resurrect' source filter, which uncomments all lines
            starting with "###l4p". Can be used for hidden L4p statements,
            which are then activated by calling 
            'use Log::Log4perl qw(:resurrect)'.
+    * (ms) Fixed Win32 test suite bug: File::Spec->catfile() returns '/'
+           as a path separator on both Unix and Win32, while Log4perl's
+           layouts (derived from caller() info) use '\' on Win32 and '/' 
+           on Unix. Changed tests to only verify file name, not path.
 
 0.49 (11/07/2004)
     * (ms) init_and_watch() no longer die()s on reloading syntactically 
